assets/styles.css
@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Fredoka&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body, html {
    scroll-behavior: smooth;
    background-color: #f0ebf8;
    min-height: 100%;
    width: 100%;
    position: relative;
    font-family: 'Poppins', sans-serif;
}

a {
    text-decoration: none;
}

nav {
    position: fixed;
    z-index: 7;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    height: 80px;
    padding: 0 5%;
    background-color: #fbfbfb;
    box-shadow: 0px 1px 15px 0px rgba(0, 0, 0, 0.2);
}

.logo {
    cursor: pointer;
    height: 80px;
    width: 120px;
}

.nav-links {
    display: flex;
    align-items: center;
    column-gap: 40px;
}

.nav-link {
    font-size: 1.25rem;
    font-family: 'Fredoka One', cursive;
    color: #000;
    opacity: .5;
    transition: transform .2s;
    height: 80px;
    line-height: 80px;
}

.nav-link:hover {
    opacity: .7;
    filter: invert(47%) sepia(46%) saturate(710%) hue-rotate(95deg) brightness(89%) contrast(90%);
    transform: scale(1.08);
}

.nav-link:active {
    transform: scale(0.92);
}

.nav-link.active {
    opacity: 1;
    filter: invert(47%) sepia(46%) saturate(710%) hue-rotate(95deg) brightness(89%) contrast(90%);
    border-bottom: 3px solid;
}

.nav-link.active:hover {
    transform: none;
}

.nav-link.basket {
    display: flex;
    align-items: center;
    column-gap: 5px;
}

.nav-link.basket span {
    font-size: 1rem;
    line-height: 18px;
}

.basket-icon {
    height: 40px;
    width: 40px;
}

.lg-show {
    display: flex;
}

.lg-hidden {
    display: none;
}

.hamburger-container {
    position: relative;
    width: 32px;
    height: 32px;
}

.hamburger {
    appearance: none;
    cursor: pointer;
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: 9;
    top: 0;
    left: 0;
}

.hamburger-container span {
    pointer-events: none;
    position: absolute;
    z-index: 9;
    left: 0;
    border-radius: 20px;
    background-color: #1B9553;
    width: 100%;
    height: 4px;
    transition: all .4s;
}

.hamburger-container .first {
    transform: translateY(2px);
}
.hamburger-container .second {
    transform: translateY(14px);
}
.hamburger-container .third {
    transform: translateY(26px);
}

.hamburger:checked ~ .first {
    transform: translateY(14px) rotate(45deg);
    background-color: #fbfbfb;
}
.hamburger:checked ~ .second {
    transform: translateY(14px) scale(.2);
    opacity: 0;
}
.hamburger:checked ~ .third {
    transform: translateY(14px) rotate(135deg);
    background-color: #fbfbfb;
}

.overlay {
    opacity: 0;
    position: absolute;
    z-index: 8;
    top: -24px;
    left: calc(-100vw + 32px + 5vw);
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #1B9553;
    pointer-events: none;
    transition: all .2s;
    transform: translateY(-100vw);
}

.hamburger:checked ~ .overlay {
    opacity: 1;
    pointer-events: auto;
    transform: translateY(0);
}

.nav-link-2 {
    font-size: 1.25rem;
    font-family: 'Fredoka One', cursive;
    color: #000;
    opacity: .5;
    transition: all .2s;
    height: 80px;
    line-height: 80px;
}

.nav-link-2:hover {
    opacity: .7;
    color: #f1f1f1;
    transform: scale(1.08);
}

.nav-link-2.active {
    opacity: 1;
    color: #fbfbfb;
}

.backdrop {
    position: absolute;
    z-index: 7;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, .4);
    display: none;
}

.login-form {
    position: relative;
    padding: 40px 20px;
    width: 45%;
    border-radius: 10px;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #f0ebf8;
    box-shadow: 2px 2px 15px 2px rgba(0, 0, 0, 0.2);
}

.close {
    cursor: pointer;
    width: 30px;
    height: 30px;
    position: absolute;
    top: 12px;
    right: 12px;
}

.close span {
    position: absolute;
    width: 100%;
    height: 3px;
    background-color: #1B9553;
    border-radius: 10px;
}

.close span:nth-child(1) {
    transform: translateY(17px) rotate(45deg);
}

.close span:nth-child(2) {
    transform: translateY(17px) rotate(135deg);
}

.login-img {
    width: 50%;
    margin: auto;
}

.login-img img {
    width: 100%;
}

#login:target {
    display: block;
}

.login-form form {
    display: grid;
    grid-template-columns: 1fr;
    gap: 25px;
}

.input-form {
    width: 80%;
    margin: auto;
    border: none;
    border-radius: 8px;
    height: 40px;
    font-size: 1.1rem;
    padding: 0 10px;
    outline: none;
    font-family: 'Poppins', sans-serif;
}

.input-form.msg-form {
    resize: none;
    height: auto;
    padding: 10px;
}

.input-form:focus {
    outline: 2px solid #1B9553;
}

.label-form {
    width: 80%;
    margin: 0 auto -15px auto;
}

.remember {
    display: flex;
    align-items: center;
    column-gap: 10px;
}

.remember input {
    cursor: pointer;
    width: 18px;
    height: 18px;
}

.remember label {
    font-size: 1rem;
    opacity: .8;
    user-select: none;
}

.btn {
    cursor: pointer;
    border-radius: 8px;
    border: none;
    background-color: #1B9553;
    color: #fbfbfb;
}

.signin-btn {
    margin: 15px auto;
    width: 80%;
    height: 48px;
    font-size: 1.4rem;
    font-weight: 500;
}

.btn-group {
    margin: 15px auto;
    width: 80%;
    display: flex;
    gap: 25px;
    justify-content: flex-end;
    align-items: center;
}

.clear-btn {
    width: 100%;
    height: 40px;
    font-size: 1.2rem;
    font-weight: 500;
    cursor: pointer;
    border-radius: 8px;
    border: none;
    background: none;
    color: #686868;
}
/* ... */

